log-output/gke-manifests/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: sunqen/log-output:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: info-file
              mountPath: "/config"
      volumes:
        - name: info-file
          configMap:
            name: log-config
            items:
              - key: information.txt
                path: information.txt
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
