log-output/gke-manifests/logdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logdb
spec:
  serviceName: logdb
  replicas: 1
  selector:
    matchLabels:
      app: logdb
  template:
    metadata:
      labels:
        app: logdb
    spec:
      containers:
        - name: logdb
          image: postgres:16-alpine
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: logdb-svc
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: logdb
