log-output/gke-manifests/pingpong-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: pingpong-app
          image: sunqen/pingpong-app
          imagePullPolicy: Always
          ports:
            - containerPort: 3001 # port where app receives connections
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
spec:
  type: ClusterIP
  selector:
    app: pingpong-app # App-name in deployment.yaml.
  ports:
    - port: 80 # Port where svc receives connections (from user or other app). Used to be 3457 in k3d setup
      protocol: TCP
      targetPort: 3001 # port where svc connects to deployed app
