log-output/gke-manifests/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: exercises-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: exercises-route
spec:
  parentRefs:
    - name: exercises-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: RequestPathModifier
          requestPathModifier:
            replacePrefixMatch: /
      backendRefs:
        - name: pingpong-app-svc
          port: 80
